--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,6 @@
 .movie__card {
     padding: 0px;
+    padding-right: 5px;
     margin: 0px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     width: 451px;
