--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,7 +2,7 @@
     padding: 0px;
     padding-right: 5px;
     margin: 0px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 451px;
     height: 279px;
     display: grid;
@@ -11,13 +11,14 @@
     box-shadow: 0px 0px 2cap rgba(0, 0, 0, 0.15);
 }
 .card__image {
-    min-width: 185px;
-    min-height: 280px;
+    width: 183px;
+    height: 281px;
     margin-right: 5px;
 
 }
 
 .card__name {
+    text-align: left;
     padding: 0px;
     margin-bottom: 0px;
     margin-top: 10px;
@@ -31,28 +32,34 @@
 }
 
 .card__theme {
-    height: 50px;
+    height: auto;
     margin: 0px;
     padding: 0px;
     font-size: 14px;
     list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: start;
+    width:80%;
     gap: 10px
 }
 
 .card__theme li {
-    border: 1px solid gray;
+    font-size: small;
+    border: 1px solid rgba(158, 158, 158, 0.623);
     border-radius: 5px;
-    padding: 2px;
+    padding: 2px 4px 0px 4px;
     height: 18px;
+    text-align: center;
 }
 
 .card__info {
     align-items: start;
     display: flex;
     flex-direction: column;
+    margin: 10px 5px 10px 5px;
     justify-content: space-around;
 }
     
