--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,12 +1,13 @@
 .movie__card {
+    background-color: (0, 0, 0, 0.15);
+    border-radius: 2px;
     padding: 0px;
     padding-right: 5px;
     margin: 0px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:Inter UI;
     width: 451px;
     height: 279px;
-    display: grid;
-    grid-template-columns: 2fr 3fr;
+    display: flex;
 
     box-shadow: 0px 0px 2cap rgba(0, 0, 0, 0.15);
 }
