--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,6 +1,10 @@
 .movie__list {
+  width: 938px;
+  align-self: center;
   padding: 0;
-  /* display: grid; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px
 }
 
 @media (max-width: 768px) {
