--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,10 @@
 .App {
-  padding: 0;
+  margin: 1vh 1vw;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px 50px;
+  justify-content: space-between;
   background-color: white;
 }
 
@@ -37,4 +38,8 @@
     padding: 0;
     align-items: center;
     display: flex;
+}
+
+.offline__alert {
+  margin: 90vh 90vw;
 }
