workTabs&Rework Header

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -47,3 +47,9 @@
 .Footer {
   margin-bottom: 1vh;
 }
+
+.Header {
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
+}
