--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -22,7 +22,7 @@
     text-align: left;
     padding: 0px;
     margin-bottom: 0px;
-    margin-top: 10px;
+    margin-top: 0px;
     line-height: 28px;
     font-weight: 100;
 }
@@ -56,7 +56,7 @@
 }
 
 .card__info {
-    align-items: start;
+    /* align-items: start; */
     display: flex;
     flex-direction: column;
     margin: 10px 5px 10px 5px;
@@ -68,5 +68,11 @@
     font-size: 15px;
     line-height: 22px;
     text-align: left;    
+}
+
+.card__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
