--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,30 +1,33 @@
 .movie__card {
-    background-color: (0, 0, 0, 0.15);
+    background: rgba(255, 255, 255, 1);
     border-radius: 2px;
     padding: 0px;
-    padding-right: 5px;
     margin: 0px;
-    font-family:Inter UI;
-    width: 451px;
-    height: 279px;
+    min-width: 454px;
+    max-width: 454px;
+    min-height: 281px;
+    max-height: 279px;
     display: flex;
 
     box-shadow: 0px 0px 2cap rgba(0, 0, 0, 0.15);
 }
 .card__image {
-    width: 183px;
-    height: 281px;
+    min-height: 281px;
+    min-width: 183px;
+    max-width: 183px;
+    max-height: 281px;
     margin-right: 5px;
 
 }
 
 .card__name {
+    font-size: 20px;
     text-align: left;
     padding: 0px;
     margin-bottom: 0px;
     margin-top: 0px;
     line-height: 28px;
-    font-weight: 100;
+    font-weight: 500;
 }
 
 .card__time {
@@ -50,8 +53,8 @@
     font-size: small;
     border: 1px solid rgba(158, 158, 158, 0.623);
     border-radius: 5px;
-    padding: 2px 4px 0px 4px;
-    height: 18px;
+    padding: 2px 4px 4px 4px;
+    height: 14px;
     text-align: center;
 }
 
@@ -60,10 +63,13 @@
     display: flex;
     flex-direction: column;
     margin: 10px 5px 10px 5px;
-    justify-content: space-around;
+    justify-content: space-between
 }
     
 .movie__info {
+    max-width: 271px;
+    max-height: 281px;
+    overflow: hidden;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 15px;
     line-height: 22px;
@@ -75,4 +81,20 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.CardRate {
+    font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+    .movie__card {
+      max-width: 90vw;
+      margin: 10px;
+      height: auto;
+      display: flex;
+    }
+    .card__image {
+
+    }
+  }
 
