--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -9,6 +9,11 @@
   justify-content: center;
 }
 
+.noMovies {
+  margin-top: 20%;
+  margin-bottom: 20%;
+}
+
 @media (max-width: 768px) {
     .movie__list {
       width: 90vw;
