--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 button {
@@ -22,8 +20,6 @@ button {
   background: -webkit-linear-gradient(#61dafb, gray);
 }
 
-
-
 input {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
@@ -31,7 +27,7 @@ input {
   border-radius: 5px;
   border: 1px solid #61dafb;
   padding: 5px;
-  transition: all 0.3s
+  transition: all 0.3s;
 }
 
 input:focus-visible {
@@ -42,5 +38,5 @@ input:focus-visible {
 
 input:hover {
   transition: all 0.3s;
-  box-shadow:  0px 0px 10px #61dafb;
+  box-shadow: 0px 0px 10px #61dafb;
 }
